<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/scoretableback"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/title_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/name_table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
        android:textColor="@color/teal_700"
        android:textSize="30sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/level_table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:text="@string/level"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
        android:textColor="@color/teal_700"
        android:textSize="30sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/score_table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:text="@string/score"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
        android:textColor="@color/teal_700"
        android:textSize="30sp"
        android:textStyle="bold"/>
    </LinearLayout>

    <ListView
        android:id="@+id/score_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_score"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"/>
    <FrameLayout
        android:id="@+id/fragment_containerscoretable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="2dp" />
</RelativeLayout>