<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/loser_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/background_game_over">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gameover"
            android:id="@+id/gameover2"
            android:layout_margin="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/your_score_loser"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/your_score_is_text"
                android:textColor="@color/white"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/player_score_loser"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/your_score_loser"
                android:layout_alignBaseline="@+id/your_score_loser"
                android:layout_marginStart="10dp"
                android:text="0" />
        </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didnt_reach"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
                />
        <RelativeLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/need_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/you_need_more"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1" />

            <TextView
                android:id="@+id/miss_score"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/need_more"
                android:layout_alignBaseline="@+id/need_more"
                android:layout_margin="5dp" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"/>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:id="@+id/ok_but">
            <ImageButton
                android:id="@+id/ok_loser"
                android:background="@null"
                android:layout_gravity="center"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ok_button_gameover"/>
            <TextView
                android:clickable="false"
                android:text="@string/ok_btn"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>