<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#88000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/popup_view"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintHeight_percent=".4"
        android:background="@drawable/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            app:layout_constraintBaseline_toBaselineOf="@+id/settings_title"
            android:layout_width="70dp"
            android:layout_height="58dp"
            android:background="@android:color/transparent"
            android:src="@drawable/exitbut"
            android:id="@+id/exit_setting"
            app:layout_constraintRight_toRightOf="parent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settings_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/settings"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
            android:textColor="@color/white"
            android:textSize="30sp"
            tools:ignore="MissingConstraints" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/music_view"
            app:layout_constraintTop_toBottomOf="@+id/settings_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/musicTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/music_toggle"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
                android:textSize="25sp"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_alignBaseline="@+id/musicTV"
                android:layout_toEndOf="@+id/musicTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:id="@+id/switch_music_btn"/>
        </RelativeLayout>

        <Button
            android:id="@+id/howToPlay_btn"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cream_bright"
            android:text="@string/how_to_play"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
            android:textSize="20sp"
            android:drawableRight="@drawable/ic_baseline_navigate_next_24"
            app:layout_constraintTop_toBottomOf="@+id/music_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            android:textColor="@color/white" />
        <Button
            android:backgroundTint="@color/cream_bright"
            android:id="@+id/credit_btn"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
            android:textSize="20sp"
            android:drawableRight="@drawable/ic_baseline_navigate_next_24"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/howToPlay_btn"
            android:text="@string/credits"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/child_container"
        app:layout_constraintStart_toStartOf="@id/popup_view"
        app:layout_constraintEnd_toEndOf="@+id/popup_view"
        app:layout_constraintTop_toTopOf="@id/popup_view"
        app:layout_constraintBottom_toBottomOf="@id/popup_view"/>

</androidx.constraintlayout.widget.ConstraintLayout>