<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/loser_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/background_fix">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leave"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
            android:textSize="25sp" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:id="@+id/yes_no"
                android:layout_marginEnd="10dp">
                <ImageButton
                    android:id="@+id/yes_exit"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/ok_button"/>

                <TextView
                    android:layout_marginTop="30dp"
                    android:clickable="false"
                    android:text="@string/yes"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/yes_no"
                android:layout_marginBottom="10dp">
                <ImageButton
                    android:id="@+id/no_exit"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/not_button"/>
                <TextView
                    android:clickable="false"
                    android:text="@string/no"
                    android:textSize="20sp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>


        </RelativeLayout>
    </LinearLayout>

</LinearLayout>