<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/playback"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_play"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/levels"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_below="@id/logo_play"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/level1_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/level2_background"
            android:layout_centerInParent="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_toStartOf="@id/level2_background">

            <ImageButton
                android:id="@+id/level1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/easy_btn" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:clickable="false"
                android:text="@string/easy_btn"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/level2_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp">
            <ImageButton
                android:id="@+id/level2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/purple_200"
                android:src="@drawable/medium_btn"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:clickable="false"
                android:text="@string/medium_btn"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/level3_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/level2_background"
            android:layout_centerInParent="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_toEndOf="@id/level2_background">
            <ImageButton
                android:id="@+id/level3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/hard_btn" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:clickable="false"
                android:text="@string/hard_btn"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/highscorebackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/levels"
        android:layout_centerInParent="true"
        android:layout_gravity="center">
        <ImageButton
            android:id="@+id/score_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/highscore_btn"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:clickable="false"
            android:text="@string/score_table_btn"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/highscorebackground"
        android:layout_centerInParent="true">
        <ImageButton
            android:id="@+id/guidance_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/highscore_btn"
            android:textColor="@color/white"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:clickable="false"
            android:text="@string/guidance_btn"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fragment_containerplay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="2dp" />

</RelativeLayout>